# tech-challenge

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  tests.yml
alembic/: env.py
alembic/versions/: eb50a47a8be2_create_product_table.py
app/: alembic.ini  main.py
app/adapters/api/dtos/: customer_dto.py  order_dto.py  payment_dto.py  product_dto.py  produto_dto.py  response_dto.py
app/adapters/api/routes/: customer_routes.py  order_routes.py  payment_routes.py  product_routes.py  produto_routes.py
app/adapters/persistence/: database.py
app/alembic/: env.py
app/alembic/versions/: 3351aec8052e_create_order_table.py  969f5c395501_add_file_path_in_product_table.py  a7a7acb073dd_create_customer_table.py  b35b1d223133_create_cart_table.py  bcfe5d78373a_create_payment_tables.py  e8fcc2d7637c_create_order_table.py  eff1132cafad_create_customer_table.py
app/application/ports/: customer_repository_port.py  order_repository_port.py  payment_port.py  product_port.py  product_repository_port.py  produto_port.py
app/application/services/: create_payment_service.py  create_products_service.py  delete_products.py  factory.py  identify_customer_service.py  list_products.py  listar_produtos.py  sign_up_customer_service.py  update_products_service.py
app/config/: db.py  depencencies.py  dependencies.py
app/domain/models/: __init__.py  customer.py  order.py  payment.py  product.py  produto.py
app/domain/ports/: order_port.py  payment_port.py
app/domain/value_objects/: cpf.py
envs/: app.env  postgres.env
scripts/: popular_produtos.py  populate_products.py
tests/: conftest.py
tests/application/services/: test_list_products.py  test_listar_produtos.py
tests/endpoints/: test_product_endpoints.py
(+17 files in other folders)
