[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-challenge"
version = "0.1.0"
description = "FastAPI application for the Tech Challenge project"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
  ".git",
  "__pycache__",
  "venv",
  ".venv",
  "migrations",
  "tests"
]
lint.select = ["E", "F", "I", "B"]  # E: pycodestyle, F: pyflakes, I: isort, B: flake8-bugbear
