[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-challenge"
version = "0.1.0"
description = "FastAPI application for the Tech Challenge project"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
  ".git",
  "__pycache__",
  "venv",
  ".venv",
  "migrations",
  "tests",
  "app/alembic",
]
lint.select = ["E", "I", "B"]  # E: pycodestyle, I: isort, B: flake8-bugbear

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]
